Making SharePoint integration works.